# opentelemetry.io

./: .gitignore  package-lock.json  package.json  webpack.config.js
.github/workflows/: check-spelling.yml  ossf-scorecard.yml  pr-actions.yml
scripts/release-stream/: .gitignore  README.md  init.sh  pyproject.toml
scripts/release-stream/.devcontainer/: devcontainer.json
scripts/release-stream/release_stream/: main.py
