[tool.poetry]
name = "release-stream"
version = "0.1.0"
description = ""
authors = ["Austin Parker <austin@ap2.io>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.352"
unstructured = "^0.11.6"
requests = "^2.31.0"
chroma = "^0.2.0"
markdown = "^3.5.1"
openai = "^1.6.1"
chromadb = "^0.4.21"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
