[tool.poetry]
name = "release-stream"
version = "0.1.0"
description = ""
authors = ["Austin Parker <austin@ap2.io>"]
readme = "README.md"
packages = [
    { include = "release_stream", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10.13"
langchain = "^0.1.9"
unstructured = "^0.11.6"
requests = "^2.31.0"
chroma = "^0.2.0"
markdown = "^3.5.1"
openai = "^1.12.0"
chromadb = "^0.4.23"
tiktoken = "^0.5.2"
langchain-community = "^0.0.24"
langchain-openai = "^0.0.7"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
